# g4mu

./: CMakeLists.txt  README.md
analysis/: process_root_trees.ipynb  process_root_trees.py
geometry/: DetectorConstruction.cc  DetectorConstruction.hh  icegeo.py  pyIceGeo.cc
simulation/: argon_box.py  physics_list.py  propagate_leptons.py  propagate_muons.py  propagate_muons_root_output.py  propagate_muons_root_output_geant4_pybind.py
utils/: plotting_magic.py  sorting.py
